# rust-mcp-utils

./: CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
crates/mcp-cli-builder/: Cargo.toml  README.md
crates/mcp-cli-builder/src/: lib.rs
crates/mcp-cli-builder/src/snapshots/: mcp_cli_builder__tests__help_output.snap  mcp_cli_builder__tests__help_short_output.snap  mcp_cli_builder__tests__version_output.snap
crates/mcp-utils/: Cargo.toml  README.md
crates/mcp-utils/src/: lib.rs  server.rs  server_config.rs  tool.rs  tool_box.rs
examples/calculator/: Cargo.toml
examples/calculator/src/: main.rs  sum_tool.rs
