[package]
name = "mcp-cli-builder"
version = "0.1.1"
description = "Command-line interface generation for MCP servers built with mcp-utils"
authors = ["jeparlefrancais <jeparlefrancais21@gmail.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/seaofvoices/rust-mcp-utils"
keywords = ["mcp", "builder", "utils", "tools", "cli"]
readme = "README.md"

[badges]
github = { repository = "seaofvoices/rust-mcp-utils" }

[dependencies]
mcp-utils = { path = "../mcp-utils", version = "0.1.1" }

rust-mcp-sdk = { workspace = true, default-features = false, features = [ "server", "hyper-server", "macros", "2025_06_18" ] }

clap = { version = "4.5.41", features = ["env", "unicode", "string", "wrap_help"] }
humantime = "2.2.0"
tokio = { version = "1.47.1", features = [ "full" ] }

[dev-dependencies]
insta = "1.43.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
