[package]
name = "calculator"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
mcp-utils = { path = "../../crates/mcp-utils", version = "0.1.1" }
mcp-cli-builder = { path = "../../crates/mcp-cli-builder", version = "0.1.1" }

rust-mcp-sdk = { workspace = true }

clap = { version = "4.5.45", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
